# aristotle-cli-rs

./: .dotagents  .gitignore  AGENTS.md  Cargo.toml  DASL-TESTING-INTEGRATION.md  DASL_LEAN_DEDUP.md  DOCUMENTATION.md  J-INVARIANT-STRATIFICATION.md  MASTER-DOCUMENTATION.md  Makefile  README.md  SHEAF-ARCHITECTURE.md  aristotle-blocks.json  aristotle_results  build-dasl-module.py  build-unified-dasl.py  build_all.sh  build_all_test.sh  config.sh  dasl-index-scanner.py  dasl-input-collector.skill  dasl-planning-summary.md  dasl-term-filter.py  dasl-verification-blocks.json  dasl-verification-declarations.json  debug_aristotle.sh  dedup-split.py  dedup-split.sh  detect-stale.py  fix-unified-imports.py  flake.nix  locate2proof-collect.py  nix-project-manager.skill  nora-car-shmem.skill  partition-dasl.py  plan.md  poll-results.sh  poll.sh  prime-stratify.py  refresh.sh  (+8 more)
.cargo/: config.toml
aristotles_results/: aristotle-submitted.json  j-invariant-stratification.json  prime-stratification.json  result.txt
aristotles_results/aristotle-chunks/: unified-dasl-001.txt  unified-dasl-002.txt  unified-dasl-003.txt  unified-dasl-004.txt  unified-dasl-005.txt  unified-dasl-006.txt  unified-dasl-007.txt  unified-dasl-008.txt  unified-dasl-009.txt  unified-dasl-010.txt  unified-dasl-011.txt  unified-dasl-012.txt  unified-dasl-013.txt  unified-dasl-014.txt  unified-dasl-015.txt  unified-dasl-016.txt
aristotles_results/dasl-lean/: dag.json  dasl-manifest.json
aristotles_results/dasl-partitions/: dasl-partitions.json
aristotles_results/dasl-subgraph/: dasl-clean-subgraph.json  dasl-clean.mermaid  dasl-filtered-subgraph.json  dasl-filtered.mermaid  dasl-subgraph.json  (+2 more)
locate2proof-output/: locate-results.txt  locate2proof-config.json
scripts/: split-all.sh  split-project.sh
split-results-dasl-verification/: split_summary.json
splitter-engine/: ALCHEMY.md  COMPLETION_SUMMARY.md  DOCUMENTATION_INDEX.md  README.md  SPLITTER_DOCUMENTATION.md  STATUS.md  TEST_RESULTS.md  doc-index.md  lakefile.toml  test_build.sh
src/: dasl_index.rs  fetch.rs  file_index.rs  index.rs  local_server.rs  main.rs  notebooklm.rs  notebooklm_cross.rs  notebooklm_dump.rs  num_graph.rs  pipeline.rs  pipeline_steps.rs  repl.rs  replay.rs  term_graph.rs  tests.rs  version.rs
(+43416 files in other folders)
