[package]
name = "aristotle-manager"
version = "0.1.0"
edition = "2024"
description = "A tool for polling Aristotle results and managing Lean4 project compilation"
authors = ["mdupont"]
license = "MIT"

[dependencies]
anyhow = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
# CLI and error handling
clap = { version = "4.5", features = ["derive"] }

# Configuration
dirs = "5.0"

# Compression
flate2 = "1.0"

# HTTP client for API (using rustls to avoid OpenSSL dependency issues)
glob = "0.3"
regex = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "rustls-tls", "blocking"], default-features = false }

# SQLite for Nix DB queries
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

# Shell commands
shell-words = "1.1"
tar = "0.4"
tempfile = "3.10"
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system
walkdir = "2.5"
